--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
 <script type="text/javascript" src="sparkblock.js"></script>
 
 
-
+<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-size="large" data-count="none" data-text='testing'>Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 
 <!-- This html will be use for each code example in your project -->
 <div data-schematic='code_html'>
-
+	<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-size="large" data-count="none" data-text='testing'>Tweet</a>
 </div>
 
 <!-- This html will be use for the example at the top of the page -->
