--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 					Everything you see here was written by Scott Tolksdorf. Check out more cool stuff below.
 				</p>
 				<p class='footer__about__icons'>
-					<a target='_blank' href='http://stolksdorf.com'         ><i class='icon-home'></i></a>
+					<a target='_blank' href='http://stolksdorf.com'><i class='icon-home'></i></a>
+					<a target='_blank' href="mailto:scott.tolksdorf@gmail.com"><i class='icon-envelope'></i></a>
 					<a target='_blank' href='https://github.com/stolksdorf' ><i class='icon-github'></i></a>
 					<a target='_blank' href='http://stolksdorf.throwww.com/'><i class='icon-pencil'></i></a>
 					<a target='_blank' href='https://twitter.com/stolksdorf'><i class='icon-twitter'></i></a>
@@ -56,7 +57,6 @@
 	</div>
 
 	<!-- Schematics -->
-
 	<a data-schematic='project_icon' target='_blank' class='project__icon card btn hint--bottom'>
 		<i data-element='iconElement'></i>
 	</a>
@@ -76,11 +76,10 @@
 <!-- Libraries -->
 <script type="text/javascript" src="paintjob/libs/jq.js"></script>
 <script type="text/javascript" src="paintjob/libs/underscore.js"></script>
-
 <script type="text/javascript" src="paintjob/libs/archetype.js"></script>
 <script type="text/javascript" src="paintjob/libs/markdownconvertor.js"></script>
-<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link rel="Stylesheet" type="text/css" href="paintjob/libs/hint.css" />
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 <!-- CodeMirror -->
 <script src="paintjob/libs/codemirror/cm.js"></script>
@@ -125,7 +124,8 @@
 
 <!-- This html will be use for the example at the top of the page -->
 <div data-schematic='example_html'>
-	<!-- HTML code for your example goes in here -->
+	<div class='example_data'></div>
+	<div class='example_result'></div>
 </div>
 
 <script>
@@ -179,6 +179,21 @@
 
 		/* Example */
 		example_initialize : function(){
+			var gen = function(){
+
+				var result = [];
+
+				_(_.random(4,10)).times(function(){
+					result.push(_.random(16,86));
+				})
+
+
+				$('.example_data').text('[' + result.join(', ') + ']');
+				$('.example_result').text(sparkblock(result, true));
+
+			};
+			gen()
+			setInterval(gen, 3000);
 			//This code will be ran once the example html is loaded
 			//Use it to start animations or run demos
 		},
