Fixed a error with the twitter demo

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 
 <!-- This html will be use for each code example in your project -->
 <div data-schematic='code_html'>
-	<div style='margin-top:30px;' class='tweet_box'></div>
+	<div>Text to tweet:</div>
+	<i><div style='margin-left:15px' class='sparkblock_box'></div></i>
+	<div style='margin-top:20px;' class='tweet_box'></div>
 </div>
 
 <!-- This html will be use for the example at the top of the page -->
