--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	*****************************************
 -->
 
-<script type="text/javascript" src="sparkblock.js"></script>
+<script type="text/javascript" src="https://raw.github.com/stolksdorf/SparkBlock/master/sparkblock.js"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 
